# cgpa

./: ;  Cargo.toml  README.md
cgpa-bin/: Cargo.toml  build.rs
cgpa-bin/examples/data/: course_scale.csv
cgpa-bin/src/: main.rs
cgpa-lib/: Cargo.toml
cgpa-lib/src/: fmt.rs  lib.rs
examples/data/: gpa_scale.csv
src/: course.rs  fmt.rs  gpa.rs  lib.rs  main.rs  tui.rs
