[package]
name = "cgpa-bin"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cgpa"
path = "src/main.rs"

# TODO: Isolate library and binary into separate workspaces
# with separate dependencies
[dependencies]
cgpa = { version = "0.1", path = "../cgpa-lib" }
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
simple_logger = "5.0"
